Fix too much height on tablet view

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,14 @@ p {
   width: 80px;
   height: 80px;
 }
+.nav-content .nav {
+  transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+}
+@media (max-width: 750px) {
+  .nav-content .nav {
+    max-height: 450px;
+  }
+}
 .nav-content .nav ul {
   display: flex;
   flex-direction: row;
@@ -203,7 +211,7 @@ p {
 }
 @media (max-width: 750px) {
   .nav-content .nav {
-    display: none;
+    opacity: 0;
     position: absolute;
     top: 0;
     left: 0;
@@ -221,7 +229,7 @@ p {
   }
 }
 .nav-content .nav.hidden {
-  display: block;
+  opacity: 1;
 }
 .nav-content .nav .close-menu {
   font-size: 30px;
@@ -287,8 +295,7 @@ p {
   padding-top: 2rem;
   opacity: 0.9;
   background-color: #222222;
-  height: auto;
-  min-height: 500px;
+  min-height: 450px;
 }
 .page-header .hero {
   text-align: center;
