--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,8 +16,7 @@
     padding-top: 2rem;
     opacity: .9;
     background-color: #222222;
-    height: auto;
-    min-height: 500px;
+    min-height: 450px;
   }
 
   .hero {
