--- a/less/nav.less
+++ b/less/nav.less
@@ -10,6 +10,12 @@
   }
 
   .nav {
+    transition: all 350ms @easing;
+
+    @media @tablet {
+      max-height: 450px;
+    }
+
     ul {
       .flex-box(row, space-between, center);
 
@@ -38,7 +44,7 @@
     }
 
     @media @tablet {
-      display: none;
+      opacity: 0;
       position: absolute;
       top: 0;
       left: 0;
@@ -54,7 +60,7 @@
     }
 
     &.hidden {
-      display: block;
+      opacity: 1;
     }
 
     .close-menu {
