--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,7 @@
 // Variables
 
+@easing: cubic-bezier(.6, .05, .28, .91);
+
 // Color pointers
 @nav-font: @white;
 
